Add Save and Continue button

--- a/app/views/confirm-attendance/rar.html
+++ b/app/views/confirm-attendance/rar.html
@@ -1,5 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = 'Should this appointment count towards RAR?' %}
+{% set buttonText = 'Save and continue' %}
 
 {% block form %}
   {{ govukRadios({
