--- a/app/views/confirm-attendance/notes.html
+++ b/app/views/confirm-attendance/notes.html
@@ -3,8 +3,19 @@
 {% set buttonText = 'Save and continue' %}
 
 {% block form %}
-<h1 class="govuk-heading-xl">Add appointment notes</h1>
   <div class="govuk-form-group">
+
+    {{ govukTextarea({
+      name: "notes",
+      id: "notes",
+      label: {
+        text: "Add appointment notes",
+        classes: "govuk-label--xl",
+        isPageHeading: true
+      },
+      rows: 10
+    } | decorateFormAttributes(['communication', CRN, sessionId, 'session-notes'])) }}
+
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
@@ -50,13 +61,6 @@
         </h2>
       </div>
     </details>
-
-    {{ govukTextarea({
-      name: "notes",
-      id: "notes",
-      rows: 10
-    } | decorateFormAttributes(['communication', CRN, sessionId, 'session-notes'])) }}
-
   </div>
 
   {{ govukFileUpload({
