Removed hint, value and updated text

--- a/app/views/confirm-attendance/add-notes.html
+++ b/app/views/confirm-attendance/add-notes.html
@@ -11,19 +11,15 @@
            isPageHeading: true
          }
        },
-       hint: {
-         html: 'Notes can also be added later'
-       },
        items: [
          {
-           text: 'Yes',
-           value: 'Yes'
+           text: 'Yes'
          },
          {
-           text: 'No',
-           value: 'No'
+           text: 'No (Notes can be added later)'
          }
        ]
        } | decorateFormAttributes(['communication', CRN, sessionId, 'add-notes']))
   }}
 {% endblock %}
+
