--- a/app/views/case/_case-service-user-banner.html
+++ b/app/views/case/_case-service-user-banner.html
@@ -8,9 +8,13 @@
 
 <p>
   {% for badge in case.riskBadges %}
-    {{ govukTag({ html: '<a href="#">' + badge.text + '</a>', classes: 'govuk-tag--link govuk-!-margin-right-1 govuk-tag--' + badge.class }) }}
-    <!-- <span class="govuk-tag govuk-tag--{{ badge.class }}{{ ' govuk-!-margin-right-2' }}">
-      {{ badge.text }}
-    </span> -->
+    {% set badgeHtml %}
+      {% if badge.rosh %}
+        <a href="#">{{ badge.text }}</a>
+      {% else %}
+        <a href="/cases/{{ CRN }}/flag/{{ badge.text | toSlug }}">{{ badge.text }}</a>
+      {% endif %}
+    {% endset %}
+    {{ govukTag({ html: badgeHtml, classes: 'govuk-tag--link govuk-!-margin-right-1 govuk-tag--' + badge.class }) }}
   {% endfor %}
 </p>
